# klayout-draw-mcp

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: editing-and-drc.md  examples.md  getting-started.md  index.md  installation.md  live-editing.md  place-and-route.md  reference.md  run-script.md
examples/: basic_shapes.py  cis_aps_pixel.py  cmos_inverter.py  nmos_transistor.py
macros/: mcp_live_bridge.py
scripts/: render_examples.py
skills/klayout-pnr/: SKILL.md
skills/klayout-pnr/scripts/: demo_pnr.py  maze_router.py  placer.py  pnr_helpers.py
src/klayout_draw_mcp/: __init__.py  mcp_live_bridge.py  server.py
src/klayout_mcp/: server.py
